Overflow issues on the  story box

--- a/react-front-end/src/stylesheets/wordlist.scss
+++ b/react-front-end/src/stylesheets/wordlist.scss
@@ -9,12 +9,13 @@
 	top: 50px;
 	font-family: 'Alice';
 	height: 42vh;
+	overflow: hidden;
 
 	.content-container {
 		padding: 20px;
 		opacity: 1;
 		z-index: 2;
-		height: 100%;
+		height: 95%;
 		width: 100%;
 		position: relative;
 		overflow: auto;
